initial Spring commit