@@ -8,145 +8,58 @@
   <packaging>pom</packaging>
   <name>AsteroidsFX</name>
 
-  <modules>
-    <module>Common</module>
-    <module>CommonBullet</module>
-    <module>Asteroid</module>
-    <module>Player</module>
-    <module>Enemy</module>
-    <module>Bullet</module>
-    <module>Collision</module>
-    <module>Core</module>
-  </modules>
+    <parent>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-parent</artifactId>
+      <version>3.2.0</version>
+      <relativePath/>
+    </parent>
 
-  <properties>
-    <java>java</java>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
-    <javafx.version>21.0.5</javafx.version>
-  </properties>
+    <modules>
+      <module>Common</module>
+      <module>CommonBullet</module>
+      <module>Asteroid</module>
+      <module>Player</module>
+      <module>Enemy</module>
+      <module>Bullet</module>
+      <module>Collision</module>
+      <module>Core</module>
+    </modules>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-controls</artifactId>
-        <version>${javafx.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-graphics</artifactId>
-        <version>${javafx.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-base</artifactId>
-        <version>${javafx.version}</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+    <properties>
+      <java.version>21</java.version>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <maven.compiler.source>21</maven.compiler.source>
+      <maven.compiler.target>21</maven.compiler.target>
+      <javafx.version>21.0.5</javafx.version>
+    </properties>
 
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>3.2.0</version>
-      </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
-        <configuration>
-          <fork>true</fork>
-        </configuration>
-      </plugin>
-      <!-- Exec plugin only for parent - not inherited by children -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>3.0.0</version>
-        <inherited>false</inherited>
-        <configuration>
-          <skip>false</skip>
-          <executable>java</executable>
-          <workingDirectory>.</workingDirectory>
-          <arguments>
-            <argument>--module-path</argument>
-            <argument>mods-mvn</argument>
-            <argument>--add-modules</argument>
-            <argument>Core,Common,CommonBullet,Asteroid,Player,Enemy,Bullet,Collision</argument>
-            <argument>--module</argument>
-            <argument>Core/dk.sdu.cbse.App</argument>
-          </arguments>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+    <dependencyManagement>
+      <dependencies>
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-controls</artifactId>
+          <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-graphics</artifactId>
+          <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-base</artifactId>
+          <version>${javafx.version}</version>
+        </dependency>
+      </dependencies>
+    </dependencyManagement>
 
-  <profiles>
-    <profile>
-      <!-- parent project should delete 'mods-mvn' -->
-      <id>parent-project</id>
-      <activation>
-        <file>
-          <missing>src</missing>
-        </file>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-clean-plugin</artifactId>
-            <version>3.2.0</version>
-            <configuration>
-              <filesets>
-                <fileset>
-                  <directory>mods-mvn</directory>
-                </fileset>
-                <fileset>
-                  <directory>libs</directory>
-                </fileset>
-              </filesets>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <!-- child projects should copy artifact into 'mods-mvn' -->
-      <id>child-project</id>
-      <activation>
-        <file>
-          <exists>src</exists>
-        </file>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>3.0.2</version>
-            <executions>
-              <execution>
-                <id>copy-installed</id>
-                <phase>install</phase>
-                <goals>
-                  <goal>copy</goal>
-                </goals>
-                <configuration>
-                  <artifactItems>
-                    <artifactItem>
-                      <groupId>${project.groupId}</groupId>
-                      <artifactId>${project.artifactId}</artifactId>
-                      <version>${project.version}</version>
-                      <type>jar</type>
-                    </artifactItem>
-                  </artifactItems>
-                  <outputDirectory>../mods-mvn</outputDirectory>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
-</project>
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+      </plugins>
+    </build>
+  </project>
